[package]
name = "ibs"
version = "0.1.0"
authors = [
  "Leon Botros <l.botros@cs.ru.nl>"
]
edition = "2021"
categories = ["cryptography", "no-std", "elliptic-curve", "identity-based"]
description = "Identity-Based Signature schemes"
keywords = ["ibs", "signatures", "ecc", "no_std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/encryption4all/ibs"

[dependencies]
curve25519-dalek = { version = "3.2.1", features = ["serde"] }
rand_core = { version = "^0.5", default-features = false }
serde = { version = "1.0.147", default-features = false }
sha3 = { version = "^0.9", default-features = false }

[dev-dependencies]
bincode = "1.3.3"
criterion = "0.4.0"
rand = "0.7.0"

[[bench]]
name = "bench"
harness = false
