[package]
name = "ibs"
version = "0.4.0-rc.7"
authors = [
  "Leon Botros <l.botros@cs.ru.nl>"
]
edition = "2021"
categories = ["cryptography", "no-std", "elliptic-curve", "identity-based"]
description = "Identity-Based Signature schemes"
keywords = ["ibs", "signatures", "ecc", "no_std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/encryption4all/ibs"

[dependencies]
curve25519-dalek = { version = "4.0.0-rc.1", features = ["serde", "digest", "rand_core"] }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1.0", default-features = false }
sha3 = { version = "0.10", default-features = false }

[dev-dependencies]
bincode = "1.3"
criterion = "0.4"
rand = "0.8"

[[bench]]
name = "bench"
harness = false
